# sample

2020_practical-machine-learning-with-rust/: .gitignore  README.md
2021_programming-rust-fast-safe-systems-development/chap-02/hello/: README.md
Solidjs_x_Cypress/: README.md  cypress.config.ts  package-lock.json  package.json
Solidjs_x_Cypress/cypress/support/: component.ts
Solidjs_x_Cypress/src/components/: Button.cy.tsx  Button.tsx
diesel_demo/: Cargo.toml  README.md  compose.yaml  getContainerIP.js
diesel_demo/src/: lib.rs
exercism/: README.md
exercism/rust/doubly-linked-list/: .gitignore  Cargo.toml
exercism/rust/macros/: README.md
hellofly/: README.md  fly.toml
hellofly-fastapi/: Dockerfile  fly.toml  pyproject.toml
hellofly-fastapi/src/: main.py
hug-example/: .gitignore  README.md  first-api.py  internal.py
l7-example/: README.md  index.html  package-lock.json  package.json
l7-example/src/: ChinaPolygonLayer.tsx  Leaflet.tsx  Map.tsx  index.tsx
simple_web_server/: Cargo.toml  README.md
simple_web_server/src/: main.rs
simple_web_server/templates/: index.html.tera
storybook-first-try/: README.md  package-lock.json  package.json
storybook-first-try/.storybook/: preview.ts
storybook-first-try/src/: Task.stories.tsx  TaskList.tsx
storybook-official/: README.md  package-lock.json  package.json
storybook-official/.storybook/: main.ts
storybook/.storybook/: main.ts
storybook/src/: Task.stories.tsx  Task.tsx  TaskList.stories.tsx
timeline/: index.html  test.css  test2.css
timeline/src/: App.tsx  index.tsx
(+23 files in other folders)
